force-app/main/default/objects/Contact/fields/Currency_Iso_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Iso_Code__c</fullName>
    <description>Currency Iso Code based on Home_Country__c field</description>
    <formula>IF(ISPICKVAL(Home_Country__c, &apos;UK&apos;),&apos;GBP&apos;, &apos;EUR&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency_Iso_Code</label>
    <type>Text</type>
</CustomField>