force-app/main/default/objects/Contact/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <label>Home_Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DE</fullName>
                <label>Denmark</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>Italy</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>Spain</label>
            </value>
            <value>
                <fullName>UK</fullName>
                <label>United Kingdom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>