force-app/main/default/objects/Contact/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>External Unique Identifier</description>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>